Updated font size, boldness and overflow and corrected anchor tag

--- a/style.css
+++ b/style.css
@@ -118,6 +118,9 @@ html {
 .font2 {
   font-family: "Roboto Mono", monospace;
 }
+.font3 {
+  font-family: "Outfit", sans-serif;
+}
 
 .form-control::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
